--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,9 @@
 			</form>
 		{% endif %}
 		<footer>
-			Written in <a href="#">Flask</a>.  Hosted on <a href="#">Heroku</a>.  View the source on <a href="#">Github</a>.
+			Written in <a href="http://flask.pocoo.org/">Flask</a>.  
+			Hosted on <a href="http://heroku.com">Heroku</a>.  
+			View the source on <a href="https://github.com/trg/GIF-Explode">Github</a>.
 		</footer>
 	</body>
 </html>
