--- a/templates/index.html
+++ b/templates/index.html
@@ -38,5 +38,20 @@
 			Hosted on <a href="http://heroku.com">Heroku</a>.  
 			View the source on <a href="https://github.com/trg/GIF-Explode">Github</a>.
 		</footer>
+		
+		<script type="text/javascript">
+
+		  var _gaq = _gaq || [];
+		  _gaq.push(['_setAccount', 'UA-26142178-1']);
+		  _gaq.push(['_trackPageview']);
+
+		  (function() {
+		    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		  })();
+
+		</script>
+		
 	</body>
 </html>
