--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,8 @@
 		<header>
 			<h1><a href="/">Gif-Explode.com</a></h1>
 			<h2>Extract images from animated gif image files!</h2>
+			<h4>If it's anything but an animated gif, nothing will happen.
+				Better error messages coming soon.</h4>
 		</header>
 		<section>
 			<form action="/process" method="post">
