--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 	<head>
+		<title>GIF Explode</title>
 		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 	</head>
 	<body>
@@ -36,6 +37,8 @@
 			</form>
 		{% endif %}
 		<footer>
+			<hr />
+			This app is beta / work-in-progress. Requires a modern browser.<br />
 			Written in <a href="http://flask.pocoo.org/">Flask</a>.  
 			Hosted on <a href="http://heroku.com">Heroku</a>.  
 			View the source on <a href="https://github.com/trg/GIF-Explode">Github</a>.
