--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 				Better error messages coming soon.</h4>
 		</header>
 		<section>
-			<form action="/process" method="post">
+			<form action="/" method="post">
 				Paste the URL to the image here: <br />  
 				<input type="url" name="image_url" placeholder="Image URL">
 				<input type="submit" value="Fetch">
@@ -31,7 +31,7 @@
 				{% endfor %}
 			</section>
 		{% else %}
-			<form action="/process" method="post">
+			<form action="/" method="post">
 				<input type="hidden" name="image_url" value="http://i.imgur.com/Ztkdp.gif">
 				<input type="submit" value="Click here for a demo!">
 			</form>
