--- a/static/style.css
+++ b/static/style.css
@@ -57,7 +57,7 @@ input[type='url'] {
 footer {
     background: #9E2B20;
     padding: 10px;
-    margin-top: 10px;
+    margin: 10px auto;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border-radius: 10px;
