--- a/templates/index.html
+++ b/templates/index.html
@@ -54,6 +54,7 @@
 				Written in <a href="http://flask.pocoo.org/">Flask</a>.  
 				Hosted on <a href="http://heroku.com">Heroku</a>.  
 				View the source on <a href="https://github.com/trg/GIF-Explode">Github</a>.
+				<a href="/api/explode?image_url=http://i.imgur.com/Ztkdp.gif">API</a>
 			</footer>
 			
 		</div>
