--- a/templates/api.html
+++ b/templates/api.html
@@ -11,5 +11,11 @@
 	<p>
 		<a href="/api/explode?image_url=http://i.imgur.com/Ztkdp.gif">Example</a>
 	</p>
+	
+	<p>
+		If you find yourself needing to use this service frequently, you probably
+		 want to run the code on your server.
+		You can find it on <a href="https://github.com/trg/GIF-Explode/blob/master/gifexplode.py">github</a>
+	</p>
 
 {% endblock %}
