less graphic demo image

--- a/templates/api.html
+++ b/templates/api.html
@@ -9,7 +9,7 @@
 	</p>
 	
 	<p>
-		<a href="/api/explode?image_url=http://i.imgur.com/Ztkdp.gif">Example</a>
+		<a href="/api/explode?image_url=http://i.imgur.com/aXNfp.gif">Example</a>
 	</p>
 	
 	<p>
