--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
 		<div id="demo">
 			Confused? <a id="demo_form_link" href="#">View the demo!</a>
 			<form id="demo_form" action="/" method="post">
-				<input type="hidden" name="image_url" value="http://i.imgur.com/Ztkdp.gif">
+				<input type="hidden" name="image_url" value="http://i.imgur.com/aXNfp.gif">
 			</form>
 		</div>
 	{% endif %}
