--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Extract Frames from an Animated GIF Image - Gif Explode</title>
+		<title>Gif Explode - Extract Frames from an Animated GIF Image</title>
 		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 	</head>
 	<body>
 		<div id="wrapper">
 			<header>
-				<h1><a href="/">Gif-Explode.com</a></h1>
+				<h1><a href="/">Gif Explode</a></h1>
 			</header>
 			
 			{% block body %}{% endblock %}
