favicon now "exists"

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<title>Gif Explode - Extract Frames from an Animated GIF Image</title>
-		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}" />
+		<link rel="shortcut icon" href="data:image/gif;base64,R0lGODlhAQABAPABAP///wAAACH5BAEKAAAALAAAAAABAAEAAAICRAEAOw%3D%3D" />
 	</head>
 	<body>
 		<div id="wrapper">
