added link section

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,6 +20,10 @@
 				Developer? Check out the <a href="/api">API</a>.
 			</footer>
 			
+			<div id="links">
+				Need more image tools?  Check out <a href="http://imgops.com/">ImgOps</a>.
+		 	</div>
+			
 		</div>
 		
 		<script type="text/javascript">
