--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 		<div id="wrapper">
+			
 			<header>
 				<h1><a href="/">Gif Explode</a></h1>
 			</header>
@@ -21,7 +22,8 @@
 			</footer>
 			
 			<div id="links">
-				Need more image tools?  Check out <a href="http://imgops.com/">ImgOps</a>.
+				Need more image tools?  Check out <a href="http://imgops.com/">ImgOps</a>.<br />
+				Tools like this could disappear from the web forever! <a href="http://americancensorship.org/">STOP SOPA</a>
 		 	</div>
 			
 		</div>
