--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,7 +23,7 @@
 			
 			<div id="links">
 				Need more image tools?  Check out <a href="http://imgops.com/">ImgOps</a>.<br />
-				Tools like this could disappear from the web forever! <a href="http://americancensorship.org/">STOP SOPA</a>
+				Tools like Gif Explode could disappear from the web forever! <a href="http://americancensorship.org/">Stop SOPA</a>
 		 	</div>
 			
 		</div>
