--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,7 +23,8 @@
 			
 			<div id="links">
 				Need more image tools?  Check out <a href="http://imgops.com/">ImgOps</a>.<br />
-				Tools like Gif Explode could disappear from the web forever! <a href="http://americancensorship.org/">Stop SOPA</a>
+				Tools like Gif Explode could disappear from the web forever! <a href="http://americancensorship.org/">Stop SOPA</a><br />
+				Content prohibited by Heroku's <a href="http://policy.heroku.com/aup">Acceptable Use Policy</a> or applicable law is forbidden.
 		 	</div>
 			
 		</div>
