--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,8 @@
 			<aside id="link_to_page">
 				Link to this page:<br />
 				<input type="text" value="http://gif-explode.com/{{ image_url }}" />
+				<br /><br />
+				<span  class='st_tumblr' ></span><span  class='st_reddit' ></span><span  class='st_twitter' ></span><span  class='st_facebook' ></span><span  class='st_email' ></span><span  class='st_sharethis' ></span>
 			</aside>
 		{% endif %}
 	
