--- a/templates/layout.html
+++ b/templates/layout.html
@@ -43,5 +43,7 @@
 
 		</script>
 		
+		<script type="text/javascript">var switchTo5x=false;</script><script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script><script type="text/javascript">stLight.options({publisher:'94d32865-7a2a-4df3-86eb-22c12a45aefa'});</script>
+		
 	</body>
 </html>
