--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Gif Explode - Extract Frames from an Animated GIF Image</title>
+		<title>Gif Explode - Online Gif Frame Viewer - Extract Frames from an Animated GIF Image</title>
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}" />
 		<link rel="shortcut icon" href="data:image/gif;base64,R0lGODlhAQABAPABAP///wAAACH5BAEKAAAALAAAAAABAAEAAAICRAEAOw%3D%3D" />
 	</head>
