--- a/templates/index.html
+++ b/templates/index.html
@@ -20,17 +20,62 @@
 	<h2>Extract single frame images from animated gif image files!</h2>
 	
 	<section>
-		<form id="main_form" action="/" method="post">
-			Paste the URL of the image here: <br />  
-			<input  type="url" 
-					name="image_url" 
-					placeholder="Image URL" 
-					autofocus="autofocus" 
-					{% if image_url %}
-						value="{{image_url}}"
-					{% endif %}/>
-			<input type="submit" value="Fetch" />
-		</form>
+		
+    <div class="options">
+      <div class="option">
+        <h3>From the web:</h3>
+        <form id="main_form" action="/" method="post">
+          <p>Paste the URL of the image here:</p> 
+          <input  type="url" 
+              name="image_url" 
+              placeholder="Image URL" 
+              autofocus="autofocus" 
+              {% if image_url %}
+                value="{{image_url}}"
+              {% endif %}/>
+          <input type="submit" value="Fetch" />
+        </form>
+      </div>
+      <div class="option right">
+        <h3>From your computer:</h3>
+        <p>
+          1. Upload your image to <a href="http://imgur.com">Imgur</a>.
+        <p>
+        <p>
+          2. Copy &amp; Paste your Imgur image URL in "From the web" form to the left
+          of this box.
+        </p>
+        <p>
+          Note: Your Imgur URL will look something like this: http://i.imgur.com/aXNfp.gif
+        </p>
+      </div>
+    </div>
+    
+    {% if not frames %}
+      <div class="options">
+        <div class="option">
+          <h3>Confused?</h3>
+          <p>
+            See it in action:
+          </p>
+          <p>
+            <a href="/http://i.imgur.com/aXNfp.gif">Click here to view the demo!</a>
+          </p>
+        </div>
+        <div class="option right">
+          <h3>The Bookmarklet</h3>
+          <p>
+            Drag this link to your browser's bookmark bar.
+            Use when you're viewing a gif directly. (eg: Your address bar says 'http://example.com/someImage.gif')
+          </p>
+          <p>
+            <a href="javascript:(function%20(){window.location.href='http://gif-explode.com/'+window.location.href;}());">GIF-Explode</a>
+          </p>
+          </p>
+        </div>
+      </div>
+    {% endif %}
+
 	</section>
 	
 	{% if frames %}
@@ -55,10 +100,5 @@
 				<img src="data:image/gif;base64,{{ frame }}" />
 			{% endfor %}
 		</section>
-		
-	{% else %}
-		<div id="demo">
-			Confused? <a href="/http://i.imgur.com/aXNfp.gif">View the demo!</a>
-		</div>
-	{% endif %}
+  {% endif %}
 {% endblock %}
