upping workers, so need to ad adds

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
 
-	{% if false and frames %}
+	{% if frames %}
 	<div id="ad">
 		<script type="text/javascript"><!--
 		google_ad_client = "ca-pub-3136501873416282";
