new ad position

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
 		<link rel="shortcut icon" href="data:image/gif;base64,R0lGODlhAQABAPABAP///wAAACH5BAEKAAAALAAAAAABAAEAAAICRAEAOw%3D%3D" />
 	</head>
 	<body>
-		<div id="wrapper">
+    <div id="wrapper" class="{% if frames %}frames{% endif %}">
 			
 			<header>
 				<h1><a href="/">Gif Explode</a></h1>
