--- a/static/style.css
+++ b/static/style.css
@@ -106,4 +106,23 @@ footer {
 
 #ad {
 	text-align: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 122px;
+
+}
+#ad .inner {
+  width: 800px;
+  height: 90px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  margin: 0 auto;
+  background: #222;
+  -webkit-border-radius: 10px 10px 0px 0px;
+  border-radius: 10px 10px 0px 0px;
+}
+#wrapper.frames {
+  padding-bottom:132px;
 }
