--- a/templates/index.html
+++ b/templates/index.html
@@ -2,18 +2,20 @@
 {% block body %}
 
 	{% if frames %}
-	<div id="ad">
-		<script type="text/javascript"><!--
-		google_ad_client = "ca-pub-3136501873416282";
-		/* gif-explode-result */
-		google_ad_slot = "5258965912";
-		google_ad_width = 728;
-		google_ad_height = 90;
-		//-->
-		</script>
-		<script type="text/javascript"
-		src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-		</script>
+  <div id="ad">
+    <div class="inner">
+      <script type="text/javascript"><!--
+      google_ad_client = "ca-pub-3136501873416282";
+      /* gif-explode-result */
+      google_ad_slot = "5258965912";
+      google_ad_width = 728;
+      google_ad_height = 90;
+      //-->
+      </script>
+      <script type="text/javascript"
+      src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+      </script>
+    </div>
 	</div>
 	{% endif %}
 
