removing google ads

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
 
-	{% if frames %}
+	{% if false %}
   <div id="ad">
     <div class="inner">
       <script type="text/javascript"><!--
