IDL badge + copy updates

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,14 +18,13 @@
 				Written in <a href="http://flask.pocoo.org/">Flask</a>.  
 				Hosted on <a href="http://heroku.com">Heroku</a>.  
 				View the source on <a href="https://github.com/trg/GIF-Explode">Github</a>.
-				Developer? Check out the <a href="/api">API</a>.
 			</footer>
 			
 			<div id="links">
 				Need more image tools?  Check out <a href="http://imgops.com/">ImgOps</a>.<br />
-				Tools like Gif Explode could disappear from the web forever! <a href="http://americancensorship.org/">Stop SOPA</a><br />
-				Content prohibited by Heroku's <a href="http://policy.heroku.com/aup">Acceptable Use Policy</a> or applicable law is forbidden.
-		 	</div>
+				Content prohibited by Heroku's <a href="http://policy.heroku.com/aup">Acceptable Use Policy</a> or applicable law is forbidden.<br />
+				<a href="http://internetdefenseleague.org"><img src="http://internetdefenseleague.org/images/badges/final/shield_badge.png" alt="Member of The Internet Defense League" /></a>
+			</div>
 			
 		</div>
 		
@@ -43,7 +42,19 @@
 
 		</script>
 		
-		<script type="text/javascript">var switchTo5x=false;</script><script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script><script type="text/javascript">stLight.options({publisher:'94d32865-7a2a-4df3-86eb-22c12a45aefa'});</script>
+        <script type="text/javascript">var switchTo5x=false;</script><script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script><script type="text/javascript">stLight.options({publisher:'94d32865-7a2a-4df3-86eb-22c12a45aefa'});</script>
+
+		<script type="text/javascript">
+			window._idl = {};
+			_idl.variant = "banner";
+			(function() {
+				var idl = document.createElement('script');
+				idl.type = 'text/javascript';
+				idl.async = true;
+				idl.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'members.internetdefenseleague.org/include/?url=' + (_idl.url || '') + '&campaign=' + (_idl.campaign || '') + '&variant=' + (_idl.variant || 'banner');
+				document.getElementsByTagName('body')[0].appendChild(idl);
+			})();
+		</script>
 		
 	</body>
 </html>
