made the footer image a bit smaller

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,7 +23,7 @@
 			<div id="links">
 				Need more image tools?  Check out <a href="http://imgops.com/">ImgOps</a>.<br />
 				Content prohibited by Heroku's <a href="http://policy.heroku.com/aup">Acceptable Use Policy</a> or applicable law is forbidden.<br />
-				<a href="http://internetdefenseleague.org"><img src="http://internetdefenseleague.org/images/badges/final/shield_badge.png" alt="Member of The Internet Defense League" /></a>
+				<a href="http://internetdefenseleague.org"><img style="width:150px;height:150px" src="http://internetdefenseleague.org/images/badges/final/shield_badge.png" alt="Member of The Internet Defense League" /></a>
 			</div>
 			
 		</div>
