--- a/templates/layout.html
+++ b/templates/layout.html
@@ -54,7 +54,26 @@
 				idl.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'members.internetdefenseleague.org/include/?url=' + (_idl.url || '') + '&campaign=' + (_idl.campaign || '') + '&variant=' + (_idl.variant || 'banner');
 				document.getElementsByTagName('body')[0].appendChild(idl);
 			})();
+        </script>
+
+        <!-- Start of Woopra Code -->
+		<script type="text/javascript">
+		function woopraReady(tracker) {
+			tracker.setDomain('gif-explode.com');
+			tracker.setIdleTimeout(60000);
+			tracker.trackPageview({type:'pageview',url:window.location.pathname+window.location.search,title:document.title});
+			return false;
+		}
+		(function() {
+			var wsc = document.createElement('script');
+			wsc.src = document.location.protocol+'//static.woopra.com/js/woopra.js';
+			wsc.type = 'text/javascript';
+			wsc.async = true;
+			var ssc = document.getElementsByTagName('script')[0];
+			ssc.parentNode.insertBefore(wsc, ssc);
+		})();
 		</script>
+		<!-- End of Woopra Code -->
 		
 	</body>
 </html>
