--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,9 @@
 	</head>
 	<body>
     <div id="wrapper" class="{% if frames %}frames{% endif %}">
-			
+			<div class="top-ad">
+				<a href="http://www.dpbolvw.net/click-5684143-10650221" target="_top">Funny T-Shirts Only $6</a> You will never find another deal like this. Any 10 for only $50!<img src="http://www.ftjcfx.com/image-5684143-10650221" width="1" height="1" border="0"/>
+			</div>
 			<header>
 				<h1><a href="/">Gif Explode</a></h1>
 			</header>
