--- a/templates/index.html
+++ b/templates/index.html
@@ -1,24 +1,6 @@
 {% extends "layout.html" %}
 {% block body %}
 
-	{% if false %}
-  <div id="ad">
-    <div class="inner">
-      <script type="text/javascript"><!--
-      google_ad_client = "ca-pub-3136501873416282";
-      /* gif-explode-result */
-      google_ad_slot = "5258965912";
-      google_ad_width = 728;
-      google_ad_height = 90;
-      //-->
-      </script>
-      <script type="text/javascript"
-      src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-      </script>
-    </div>
-	</div>
-	{% endif %}
-
 	<h2>Extract single frame images from animated gif image files!</h2>
 	
 	<section>
@@ -38,7 +20,7 @@
           <input type="submit" value="Fetch" />
         </form>
         <p>
-          Or use a photo from Dropbox, Facebook, Github, GDrive, Flickr, or GMail:
+          Or use a graphic from Dropbox, Facebook, Github, GDrive, Flickr, or GMail:
         </p>
         <input type="filepicker" 
                id="filepickerInput"
