--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,7 +26,11 @@
 				Need more image tools?  Check out <a href="http://imgops.com/">ImgOps</a>.<br />
 				Content prohibited by Heroku's <a href="http://policy.heroku.com/aup">Acceptable Use Policy</a> or applicable law is forbidden.<br />
 				<a href="http://internetdefenseleague.org"><img style="width:150px;height:150px" src="http://internetdefenseleague.org/images/badges/final/shield_badge.png" alt="Member of The Internet Defense League" /></a>
-			</div>
+      </div>
+
+			<div class="top-ad">
+        <a href="http://www.kqzyfj.com/click-5684143-10650219" target="_top">All Printed Tees $6</a> Yes, we are for real. Now get 10 Tees for only $50!<img src="http://www.tqlkg.com/image-5684143-10650219" width="1" height="1" border="0"/>
+      </div>
 			
 		</div>
 		
