test add branch feature

--- a/templates/500.html
+++ b/templates/500.html
@@ -4,7 +4,7 @@
 	<h2>500 Error</h2>
 
 	<p>
-    If you're seeing this error after submitting an image, 
+    If you're seeing this error after submitting an image(), 
     the image URL may not be valid.  Double check and try again.
   </p>
 
